Change frontend as well as adding the needed javascripts for our new selectable-alert provider

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -146,9 +146,51 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Alarm-Länder",
   "settings.alert_countries_description": "Wählen Sie die Länder aus, für die E-Mail-Alarme ausgelöst werden sollen, wenn eine Sperrung erfolgt.",
-  "settings.email_alerts": "E-Mail-Benachrichtigungseinstellungen",
-  "settings.email_alerts_for_bans": "E-Mail-Benachrichtigungen für Sperrungen aktivieren",
-  "settings.email_alerts_for_unbans": "E-Mail-Benachrichtigungen für Entsperrungen aktivieren",
+  "settings.alerts": "Benachrichtigungseinstellungen",
+  "settings.alerts_for_bans": "Benachrichtigungen für Sperrungen aktivieren",
+  "settings.alerts_for_unbans": "Benachrichtigungen für Entsperrungen aktivieren",
+  "settings.alert_provider": "Benachrichtigungs-Anbieter",
+  "settings.alert_provider_email": "E-Mail (SMTP)",
+  "settings.alert_provider_webhook": "Webhook",
+  "settings.alert_provider_elasticsearch": "Elasticsearch",
+  "settings.webhook.title": "Webhook-Konfiguration",
+  "settings.webhook.url": "Webhook-URL",
+  "settings.webhook.url_placeholder": "https://mein-ntfy-server/fail2ban-topic",
+  "settings.webhook.method": "HTTP-Methode",
+  "settings.webhook.headers": "Benutzerdefinierte Header",
+  "settings.webhook.headers_placeholder": "Authorization: Bearer your-token",
+  "settings.webhook.headers_hint": "Ein Header pro Zeile im Format Schlüssel: Wert.",
+  "settings.webhook.skip_tls": "TLS-Zertifikatsprüfung überspringen",
+  "settings.webhook.test": "Test-Webhook senden",
+  "settings.webhook.test_hint": "⚠️ Bitte speichern Sie die Webhook-Einstellungen zuerst, bevor Sie testen.",
+  "settings.elasticsearch.title": "Elasticsearch-Konfiguration",
+  "settings.elasticsearch.url": "Elasticsearch-URL",
+  "settings.elasticsearch.url_placeholder": "https://elasticsearch.example.com:9200",
+  "settings.elasticsearch.index": "Indexname",
+  "settings.elasticsearch.index_placeholder": "fail2ban-events",
+  "settings.elasticsearch.index_hint": "Ein tägliches Datumssuffix (-YYYY.MM.DD) wird automatisch für das Index-Lifecycle-Management angehängt.",
+  "settings.elasticsearch.api_key": "API-Schlüssel",
+  "settings.elasticsearch.api_key_placeholder": "Base64-kodierter API-Schlüssel",
+  "settings.elasticsearch.api_key_hint": "Bevorzugte Authentifizierungsmethode. Leer lassen, um Benutzername/Passwort zu verwenden.",
+  "settings.elasticsearch.username": "Benutzername",
+  "settings.elasticsearch.username_placeholder": "elastic",
+  "settings.elasticsearch.password": "Passwort",
+  "settings.elasticsearch.skip_tls": "TLS-Zertifikatsprüfung überspringen",
+  "settings.elasticsearch.test": "Verbindung testen",
+  "settings.elasticsearch.test_hint": "⚠️ Bitte speichern Sie die Elasticsearch-Einstellungen zuerst, bevor Sie testen.",
+  "settings.elasticsearch.help_title": "Elasticsearch Einrichtungsanleitung",
+  "settings.elasticsearch.help_template_title": "1. Index-Template erstellen",
+  "settings.elasticsearch.help_template_desc": "Erstellen Sie ein Index-Template in Kibana Dev Tools oder über die API, damit Elasticsearch die Felder korrekt zuordnet:",
+  "settings.elasticsearch.help_doc_title": "2. Dokumentstruktur",
+  "settings.elasticsearch.help_doc_desc": "Fail2ban-UI sendet ECS-kompatible Dokumente. Jedes Ban-/Unban-Ereignis wird in fail2ban-events-YYYY.MM.DD indiziert:",
+  "settings.elasticsearch.help_auth_title": "3. Authentifizierung",
+  "settings.elasticsearch.help_auth_desc": "Verwenden Sie einen API-Schlüssel (bevorzugt) oder Basic Auth mit einem Benutzer, der Schreibzugriff auf die fail2ban-events-* Indizes hat. Erstellen Sie einen API-Schlüssel in Kibana unter Stack Management → API Keys.",
+  "settings.elasticsearch.help_savetest_title": "4. Speichern und Testen",
+  "settings.elasticsearch.help_savetest_desc": "Speichern Sie die Fail2ban-UI-Einstellungen und testen Sie die Verbindung zu Elasticsearch über den Test-Button. (Dabei wird der fail2ban-events-* Index erstellt und das erste Ereignis aufgenommen.)",
+  "settings.elasticsearch.help_dataview_title": "5. Kibana Data View",
+  "settings.elasticsearch.help_dataview_desc": "Gehen Sie in Kibana zu Stack Management → Data Views → Data View erstellen. Verwenden Sie das Muster fail2ban-events-* als Name und Indexmuster und wählen Sie @timestamp als Zeitfeld.",
+  "settings.elasticsearch.help_review_title": "6. Daten überprüfen",
+  "settings.elasticsearch.help_review_desc": "Gehen Sie in Kibana zu Discover → Wählen Sie den fail2ban-events-* Index und Sie sollten Ihr erstes aufgenommenes Ereignis sehen.",
   "settings.smtp": "SMTP-Konfiguration",
   "settings.smtp_host": "SMTP-Host",
   "settings.smtp_host_placeholder": "z.B. smtp.gmail.com",
