--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -20,12 +20,12 @@
   "dashboard.no_enabled_servers_title": "Ke aktivi Verbindige",
   "dashboard.no_enabled_servers_body": "Aktivier dr lokal Connector oder registrier ä entfernte Fail2ban-Server.",
   "dashboard.jail_local_warning_title": "Das jail.local uf däm Server wird nid vom Fail2ban-UI verwaltet",
-  "dashboard.jail_local_warning_body": "D Datei /etc/fail2ban/jail.local ufem usgwählte Server existiert, wird aber nid vom Fail2ban-UI verwaltet. D Callback-Aktion (ui-custom-action) fähut, drum wärde Ban-/Unban-Ereignis nid ufzeichnet und kei E-Mail-Benachrichtigunge verschickt. Zum behebe: Verschieb jedi Jail-Definition us jail.local i ä eigeni Datei unger /etc/fail2ban/jail.d/ (nimm jailname.conf für ä Standard-Konfig oder jailname.local zumnä bestehendi .conf z überschriibe). Lösch denn jail.local, damit Fail2ban-UI ä eigeni verwalteti Version cha ersteue. Steu o sicher dass z Fail2ban-UI Schriibrächt uf /etc/fail2ban/ het -> siehe Doku.",
+  "dashboard.jail_local_warning_body": "D Datei /etc/fail2ban/jail.local ufem usgwählte Server existiert, wird aber nid vom Fail2ban-UI verwaltet. D Callback-Aktion (ui-custom-action) fähut, drum wärde Ban-/Unban-Events nid ufzeichnet und kei E-Mail-Benachrichtigunge verschickt. Zum behebe: Verschieb jedi Jail-Definition us jail.local i ä eigeni Datei unger /etc/fail2ban/jail.d/ (nimm jailname.conf für ä Standard-Konfig oder jailname.local zumnä bestehendi .conf z überschriibe). Lösch denn jail.local, damit Fail2ban-UI ä eigeni verwalteti Version cha ersteue. Steu o sicher dass z Fail2ban-UI Schriibrächt uf /etc/fail2ban/ het -> siehe Doku.",
   "dashboard.errors.summary_failed": "Zämmefassig het nid chönne glade wärde.",
   "dashboard.cards.active_jails": "Aktivi Jails",
   "dashboard.cards.total_banned": "Total g'sperrti IPs",
   "dashboard.cards.new_last_hour": "Neu i dr letschte Stund",
-  "dashboard.cards.total_logged": "Gspichereti Sperr-Ereigniss",
+  "dashboard.cards.total_logged": "Gspichereti Sperr-Event",
   "dashboard.cards.recurring_week": "Widerkehrendi IPs (7 Täg)",
   "dashboard.cards.recurring_hint": "Wiederholendi Täterschaft us de letschte 7 Täg.",
   "dashboard.table.jail_name": "Jail-Name",
@@ -57,22 +57,22 @@
   "dashboard.banned.show_more": "Meh azeige",
   "dashboard.banned.show_less": "Weniger azeige",
   "logs.overview.title": "Generelli Log-Übersicht",
-  "logs.overview.subtitle": "Vom Fail2ban-UI gspeichereti Ereigniss über aui Connectorä.",
+  "logs.overview.subtitle": "Vom Fail2ban-UI gspeichereti Events über aui Connectorä.",
   "logs.overview.refresh": "Date aktualisiere",
-  "logs.overview.total_events": "Total gspeichereti Ereigniss",
-  "logs.overview.per_server": "Ereigniss pro Server",
-  "logs.overview.recent_events_title": "Letschti gspeichereti Ereigniss",
+  "logs.overview.total_events": "Total gspeichereti Events",
+  "logs.overview.per_server": "Events pro Server",
+  "logs.overview.recent_events_title": "Letschti gspeichereti Events",
   "logs.overview.clear_events": "Lääre",
-  "logs.overview.clear_events_confirm": "Damit wärde aui gspeicherete Ban-Ereigniss unwiderueflich glöscht. Statistike, Insights und de ganz Ereignisverlauf wärded uf Null zrugggsetzt.\n\nDas chan nöd rückgängig gmacht werde. Wiiterfahre?",
-  "logs.overview.clear_events_success": "Aui gspeicherete Ereigniss glöscht.",
-  "logs.overview.recent_empty": "No keni gspeichereti Ereigniss gfunde.",
-  "logs.overview.empty": "No keni Sperr-Ereigniss protokolliert.",
+  "logs.overview.clear_events_confirm": "Damit wärde aui gspeicherete Ban-Events unwiderueflich glöscht. Statistike, Insights und de ganz Eventverlauf wärded uf Null zrugggsetzt.\n\nDas chan nöd rückgängig gmacht werde. Wiiterfahre?",
+  "logs.overview.clear_events_success": "Aui gspeicherete Events glöscht.",
+  "logs.overview.recent_empty": "No keni gspeichereti Events gfunde.",
+  "logs.overview.empty": "No keni Sperr-Events protokolliert.",
   "logs.overview.open_insights": "Insights azeige",
   "logs.overview.total_today": "Hüt",
   "logs.overview.total_week": "Letschti 7 Täg",
   "logs.overview.per_server_empty": "No keni Serverdate verfügbar.",
-  "logs.overview.recent_filtered_empty": "Kei Ereigniss erfülle d Filter.",
-  "logs.overview.recent_count_label": "Aazeigti Ereigniss",
+  "logs.overview.recent_filtered_empty": "Kei Events erfülle d Filter.",
+  "logs.overview.recent_count_label": "Aazeigti Events",
   "logs.overview.load_more": "Mehr lade",
   "logs.overview.country_unknown": "Unbekannt",
   "logs.overview.last_seen": "Zletscht gseh",
@@ -85,7 +85,7 @@
   "logs.table.actions": "Aktione",
   "logs.actions.whois": "Whois",
   "logs.actions.logs": "Logs",
-  "logs.search.label": "Ereigniss sueche",
+  "logs.search.label": "Event sueche",
   "logs.search.placeholder": "IP, Jail oder Server sueche",
   "logs.search.country_label": "Land",
   "logs.search.country_all": "Aui Länder",
@@ -141,14 +141,56 @@
   "settings.callback_url_env_hint": "Um d Callback-URL über d Weboberflächi z ändere, entfern d CALLBACK_URL-Umgebigsvariable und start dr Container neu.",
   "settings.callback_secret": "Fail2ban Callback-URL Secret",
   "settings.callback_secret_placeholder": "Automatisch generierts 42-Zeiche-Secret",
-  "settings.callback_secret.description": "Zur Authentifizierig vo Ban-Benachrichtigungsafroge. Es wird outomatisch id Fail2ban-Action-Konfiguration inkludiert.",
+  "settings.callback_secret.description": "Zur Authentifizierig vo Ban-Callbacks. Wird outomatisch id Fail2ban-Action-Konfiguration abegschribe.",
   "settings.destination_email": "Ziiu-Email (Alarmempfänger)",
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Alarm-Länder",
   "settings.alert_countries_description": "Wähl d'Länder us, für weli du per Email ä Alarm becho wetsch, wenn e Sperrig erfolgt.",
-  "settings.email_alerts": "Email-Benachrichtigungsiistellige",
-  "settings.email_alerts_for_bans": "Email-Benachrichtigunge für Sperrige aktiviere",
-  "settings.email_alerts_for_unbans": "Email-Benachrichtigunge für Entsperrige aktiviere",
+  "settings.alerts": "Alarm-Istellige",
+  "settings.alerts_for_bans": "Alarm für Sperrige aktiviere",
+  "settings.alerts_for_unbans": "Alarm für Entsperrige aktiviere",
+  "settings.alert_provider": "Alarm-Abieter",
+  "settings.alert_provider_email": "E-Mail (SMTP)",
+  "settings.alert_provider_webhook": "Webhook",
+  "settings.alert_provider_elasticsearch": "Elasticsearch",
+  "settings.webhook.title": "Webhook-Konfiguration",
+  "settings.webhook.url": "Webhook-Adrässe",
+  "settings.webhook.url_placeholder": "https://mi-ntfy-server/fail2ban-topic",
+  "settings.webhook.method": "HTTP-Methode",
+  "settings.webhook.headers": "Eigeni Header",
+  "settings.webhook.headers_placeholder": "Authorization: Bearer di-token",
+  "settings.webhook.headers_hint": "Ei Header pro Zile im Format Schlüssel: Wert.",
+  "settings.webhook.skip_tls": "TLS-Zertifikatsprüefig überspringä",
+  "settings.webhook.test": "Test-Webhook schicke",
+  "settings.webhook.test_hint": "⚠️ Bitte zersch d'Webhook-Iistellige spichere, bevor testet wird.",
+  "settings.elasticsearch.title": "Elasticsearch-Konfiguration",
+  "settings.elasticsearch.url": "Elasticsearch-Adrässe",
+  "settings.elasticsearch.url_placeholder": "https://elasticsearch.example.com:9200",
+  "settings.elasticsearch.index": "Indexname",
+  "settings.elasticsearch.index_placeholder": "fail2ban-events",
+  "settings.elasticsearch.index_hint": "Es täglichs Datumssuffix (-YYYY.MM.DD) wird automatisch für s'Index-Lifecycle-Management aghängt.",
+  "settings.elasticsearch.api_key": "API-Schlüssel",
+  "settings.elasticsearch.api_key_placeholder": "Base64-kodierte API-Schlüssel",
+  "settings.elasticsearch.api_key_hint": "Bevorzugti Authentifizierigsmethode. Leer lah, zum Benutzername/Passwort z'verwende.",
+  "settings.elasticsearch.username": "Benutzername",
+  "settings.elasticsearch.username_placeholder": "elastic",
+  "settings.elasticsearch.password": "Passwort",
+  "settings.elasticsearch.skip_tls": "TLS-Zertifikatsprüefig überspringä",
+  "settings.elasticsearch.test": "Verbindig teste",
+  "settings.elasticsearch.test_hint": "⚠️ Bitte zersch d'Elasticsearch-Iistellige spichere, bevor testet wird.",
+  "settings.elasticsearch.help_title": "Elasticsearch Iirichtigsaleitig",
+  "settings.elasticsearch.help_template_title": "1. Index-Template erstelle",
+  "settings.elasticsearch.help_template_desc": "Ersteu es neus Index-Template us de Kibana Dev Tools, damit diä ingestete Fälder im Elasticsearch korrekt zugeordnet werde:",
+  "settings.elasticsearch.help_doc_title": "2. Dokumänt-Struktur",
+  "settings.elasticsearch.help_doc_desc": "Fail2ban-UI schickt äs ECS-kompatibles Dokumänt. Jedes Ban-/Unban-Events wird in fail2ban-events-YYYY.MM.DD indexiert:",
+  "settings.elasticsearch.help_auth_title": "3. Authentifizierig",
+  "settings.elasticsearch.help_auth_desc": "Bruche ä API-Schlüssu (bevorzugt) oder Basic Auth mit emene Benutzer, wo Schriibrächt uf d'fail2ban-events-* het. Ä API-Schlüssu ersteue, chasch im Kibana unter Stack Management → API Keys.",
+  "settings.elasticsearch.help_savetest_title": "4. Speichere und Teste",
+  "settings.elasticsearch.help_savetest_desc": "Speicher d'Fail2ban-UI-Iistellige und test d'Verbindig zum Elasticsearch über de Test-Button. (Debii wird ou gad dr fail2ban-events-* Index ersteut und s'erst Events indexiert.)",
+  "settings.elasticsearch.help_dataview_title": "5. Kibana Data View",
+  "settings.elasticsearch.help_dataview_desc": "Im Kibana menu unger Stack Management → Data Views → Data View erstelle. Verwänd fail2ban-events-* als Name und Index-pattern und wähu @timestamp als Zitfäld.",
+  "settings.elasticsearch.help_review_title": "6. Date überprüefe",
+  "settings.elasticsearch.help_review_desc": "Im Kibana unger Discover → Wähu dr fail2ban-events-* Index us und du söttsch dis erschte indexierte Events gseh.",
   "settings.smtp": "SMTP-Konfiguration",
   "settings.smtp_host": "SMTP-Host",
   "settings.smtp_host_placeholder": "z.B. smtp.gmail.com",
@@ -382,7 +424,7 @@
   "email.test.details.triggered_at": "Usglöst um",
   "email.test.whois_no_data": "Für Test-E-Mails wird keni WHOIS-Abfrag düregfühert.",
   "email.test.sample_logs": "2025-01-01T12:00:00Z Bispil-Log-Itrag vom Fail2ban-UI.",
-  "email.whois.no_data": "WHOIS-Date si für das Ereignis nid erfasst worde.",
+  "email.whois.no_data": "WHOIS-Date si für das Events nid erfasst worde.",
   "email.logs.no_data": "Für de Block sind keni Log-Iiträg erfasst worde.",
   "email.footer.text": "Diä Nachricht isch automatisch vom Fail2Ban-UI generiert worde",
   "email.unban.title": "IP-Adrässä entsperrt",
