--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -146,9 +146,51 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Alert Countries",
   "settings.alert_countries_description": "Choose the countries for which you want to receive email alerts when a block is triggered.",
-  "settings.email_alerts": "Email Alert Preferences",
-  "settings.email_alerts_for_bans": "Enable email alerts for bans",
-  "settings.email_alerts_for_unbans": "Enable email alerts for unbans",
+  "settings.alerts": "Alert Preferences",
+  "settings.alerts_for_bans": "Enable alerts for bans",
+  "settings.alerts_for_unbans": "Enable alerts for unbans",
+  "settings.alert_provider": "Alert Provider",
+  "settings.alert_provider_email": "Email (SMTP)",
+  "settings.alert_provider_webhook": "Webhook",
+  "settings.alert_provider_elasticsearch": "Elasticsearch",
+  "settings.webhook.title": "Webhook Configuration",
+  "settings.webhook.url": "Webhook URL",
+  "settings.webhook.url_placeholder": "https://my-ntfy-server/fail2ban-topic",
+  "settings.webhook.method": "HTTP Method",
+  "settings.webhook.headers": "Custom Headers",
+  "settings.webhook.headers_placeholder": "Authorization: Bearer your-token",
+  "settings.webhook.headers_hint": "One header per line in Key: Value format.",
+  "settings.webhook.skip_tls": "Skip TLS Certificate Verification",
+  "settings.webhook.test": "Send Test Webhook",
+  "settings.webhook.test_hint": "⚠️ Please save your webhook settings first before testing.",
+  "settings.elasticsearch.title": "Elasticsearch Configuration",
+  "settings.elasticsearch.url": "Elasticsearch URL",
+  "settings.elasticsearch.url_placeholder": "https://elasticsearch.example.com:9200",
+  "settings.elasticsearch.index": "Index Name",
+  "settings.elasticsearch.index_placeholder": "fail2ban-events",
+  "settings.elasticsearch.index_hint": "A daily date suffix (-YYYY.MM.DD) is appended automatically for index lifecycle management.",
+  "settings.elasticsearch.api_key": "API Key",
+  "settings.elasticsearch.api_key_placeholder": "Base64-encoded API key",
+  "settings.elasticsearch.api_key_hint": "Preferred authentication method. Leave empty to use username/password instead.",
+  "settings.elasticsearch.username": "Username",
+  "settings.elasticsearch.username_placeholder": "elastic",
+  "settings.elasticsearch.password": "Password",
+  "settings.elasticsearch.skip_tls": "Skip TLS Certificate Verification",
+  "settings.elasticsearch.test": "Test Connection",
+  "settings.elasticsearch.test_hint": "⚠️ Please save your Elasticsearch settings first before testing.",
+  "settings.elasticsearch.help_title": "Elasticsearch Setup Guide",
+  "settings.elasticsearch.help_template_title": "1. Create an Index Template",
+  "settings.elasticsearch.help_template_desc": "Create an index template in Kibana Dev Tools or via the API so Elasticsearch maps the fields correctly:",
+  "settings.elasticsearch.help_doc_title": "2. Document Structure",
+  "settings.elasticsearch.help_doc_desc": "Fail2ban-UI sends ECS-compatible documents. Each ban/unban event is indexed to fail2ban-events-YYYY.MM.DD:",
+  "settings.elasticsearch.help_auth_title": "3. Authentication",
+  "settings.elasticsearch.help_auth_desc": "Use an API key (preferred) or basic auth with a user that has write access to the fail2ban-events-* indices. Create an API key in Kibana under Stack Management → API Keys.",
+  "settings.elasticsearch.help_savetest_title": "4. Save and Test",
+  "settings.elasticsearch.help_savetest_desc": "Save the Fail2ban-UI settings and test the connection to Elasticsearch by clicking the Test button. (This will create the fail2ban-events-* index and ingests as well the first event.)",
+  "settings.elasticsearch.help_dataview_title": "5. Kibana Data View",
+  "settings.elasticsearch.help_dataview_desc": "In Kibana, go to Stack Management → Data Views → Create data view. Use the pattern fail2ban-events-* as name and as index pattern and select @timestamp as the time field.",
+  "settings.elasticsearch.help_review_title": "6. Review the Data",
+  "settings.elasticsearch.help_review_desc": "In Kibana, go to Discover → Select the fail2ban-events-* index and you should see your first ingested event.",
   "settings.smtp": "SMTP Configuration",
   "settings.smtp_host": "SMTP Host",
   "settings.smtp_host_placeholder": "e.g., smtp.gmail.com",
