--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -146,9 +146,51 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Países para alerta",
   "settings.alert_countries_description": "Elige los países para los que deseas recibir alertas por correo electrónico cuando se produzca un bloqueo.",
-  "settings.email_alerts": "Preferencias de alertas por email",
-  "settings.email_alerts_for_bans": "Activar alertas por email para bloqueos",
-  "settings.email_alerts_for_unbans": "Activar alertas por email para desbloqueos",
+  "settings.alerts": "Preferencias de alertas",
+  "settings.alerts_for_bans": "Activar alertas para bloqueos",
+  "settings.alerts_for_unbans": "Activar alertas para desbloqueos",
+  "settings.alert_provider": "Proveedor de alertas",
+  "settings.alert_provider_email": "Email (SMTP)",
+  "settings.alert_provider_webhook": "Webhook",
+  "settings.alert_provider_elasticsearch": "Elasticsearch",
+  "settings.webhook.title": "Configuración de Webhook",
+  "settings.webhook.url": "URL del Webhook",
+  "settings.webhook.url_placeholder": "https://my-ntfy-server/fail2ban-topic",
+  "settings.webhook.method": "Método HTTP",
+  "settings.webhook.headers": "Encabezados personalizados",
+  "settings.webhook.headers_placeholder": "Authorization: Bearer tu-token",
+  "settings.webhook.headers_hint": "Un encabezado por línea en formato Clave: Valor.",
+  "settings.webhook.skip_tls": "Omitir verificación de certificado TLS",
+  "settings.webhook.test": "Enviar webhook de prueba",
+  "settings.webhook.test_hint": "⚠️ Guarde la configuración del webhook antes de probar.",
+  "settings.elasticsearch.title": "Configuración de Elasticsearch",
+  "settings.elasticsearch.url": "URL de Elasticsearch",
+  "settings.elasticsearch.url_placeholder": "https://elasticsearch.example.com:9200",
+  "settings.elasticsearch.index": "Nombre del índice",
+  "settings.elasticsearch.index_placeholder": "fail2ban-events",
+  "settings.elasticsearch.index_hint": "Se añade automáticamente un sufijo de fecha diario (-AAAA.MM.DD) para la gestión del ciclo de vida del índice.",
+  "settings.elasticsearch.api_key": "Clave API",
+  "settings.elasticsearch.api_key_placeholder": "Clave API codificada en Base64",
+  "settings.elasticsearch.api_key_hint": "Método de autenticación preferido. Dejar vacío para usar nombre de usuario/contraseña.",
+  "settings.elasticsearch.username": "Nombre de usuario",
+  "settings.elasticsearch.username_placeholder": "elastic",
+  "settings.elasticsearch.password": "Contraseña",
+  "settings.elasticsearch.skip_tls": "Omitir verificación de certificado TLS",
+  "settings.elasticsearch.test": "Probar conexión",
+  "settings.elasticsearch.test_hint": "⚠️ Guarde la configuración de Elasticsearch antes de probar.",
+  "settings.elasticsearch.help_title": "Guía de configuración de Elasticsearch",
+  "settings.elasticsearch.help_template_title": "1. Crear una plantilla de índice",
+  "settings.elasticsearch.help_template_desc": "Cree una plantilla de índice en Kibana Dev Tools o a través de la API para que Elasticsearch mapee correctamente los campos:",
+  "settings.elasticsearch.help_doc_title": "2. Estructura del documento",
+  "settings.elasticsearch.help_doc_desc": "Fail2ban-UI envía documentos compatibles con ECS. Cada evento de ban/unban se indexa en fail2ban-events-AAAA.MM.DD:",
+  "settings.elasticsearch.help_auth_title": "3. Autenticación",
+  "settings.elasticsearch.help_auth_desc": "Use una clave API (preferida) o autenticación básica con un usuario que tenga acceso de escritura a los índices fail2ban-events-*. Cree una clave API en Kibana en Stack Management → API Keys.",
+  "settings.elasticsearch.help_savetest_title": "4. Guardar y Probar",
+  "settings.elasticsearch.help_savetest_desc": "Guarde la configuración de Fail2ban-UI y pruebe la conexión a Elasticsearch haciendo clic en el botón Test. (Esto creará el índice fail2ban-events-* e ingestará el primer evento.)",
+  "settings.elasticsearch.help_dataview_title": "5. Vista de datos de Kibana",
+  "settings.elasticsearch.help_dataview_desc": "En Kibana, vaya a Stack Management → Data Views → Crear vista de datos. Use el patrón fail2ban-events-* como nombre y patrón de índice y seleccione @timestamp como campo de tiempo.",
+  "settings.elasticsearch.help_review_title": "6. Revisar los datos",
+  "settings.elasticsearch.help_review_desc": "En Kibana, vaya a Discover → Seleccione el índice fail2ban-events-* y debería ver su primer evento ingestado.",
   "settings.smtp": "Configuración SMTP",
   "settings.smtp_host": "Host SMTP",
   "settings.smtp_host_placeholder": "p.ej., smtp.gmail.com",
