--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -146,9 +146,51 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Pays d'alerte",
   "settings.alert_countries_description": "Choisissez les pays pour lesquels vous souhaitez recevoir des alertes par email lors d'un blocage.",
-  "settings.email_alerts": "Préférences d'alertes email",
-  "settings.email_alerts_for_bans": "Activer les alertes email pour les bannissements",
-  "settings.email_alerts_for_unbans": "Activer les alertes email pour les débannissements",
+  "settings.alerts": "Préférences d'alertes",
+  "settings.alerts_for_bans": "Activer les alertes pour les bannissements",
+  "settings.alerts_for_unbans": "Activer les alertes pour les débannissements",
+  "settings.alert_provider": "Fournisseur d'alertes",
+  "settings.alert_provider_email": "Email (SMTP)",
+  "settings.alert_provider_webhook": "Webhook",
+  "settings.alert_provider_elasticsearch": "Elasticsearch",
+  "settings.webhook.title": "Configuration du Webhook",
+  "settings.webhook.url": "URL du Webhook",
+  "settings.webhook.url_placeholder": "https://my-ntfy-server/fail2ban-topic",
+  "settings.webhook.method": "Méthode HTTP",
+  "settings.webhook.headers": "En-têtes personnalisés",
+  "settings.webhook.headers_placeholder": "Authorization: Bearer votre-token",
+  "settings.webhook.headers_hint": "Un en-tête par ligne au format Clé: Valeur.",
+  "settings.webhook.skip_tls": "Ignorer la vérification du certificat TLS",
+  "settings.webhook.test": "Envoyer un webhook de test",
+  "settings.webhook.test_hint": "⚠️ Veuillez enregistrer vos paramètres webhook avant de tester.",
+  "settings.elasticsearch.title": "Configuration Elasticsearch",
+  "settings.elasticsearch.url": "URL Elasticsearch",
+  "settings.elasticsearch.url_placeholder": "https://elasticsearch.example.com:9200",
+  "settings.elasticsearch.index": "Nom de l'index",
+  "settings.elasticsearch.index_placeholder": "fail2ban-events",
+  "settings.elasticsearch.index_hint": "Un suffixe de date quotidien (-AAAA.MM.JJ) est ajouté automatiquement pour la gestion du cycle de vie de l'index.",
+  "settings.elasticsearch.api_key": "Clé API",
+  "settings.elasticsearch.api_key_placeholder": "Clé API encodée en Base64",
+  "settings.elasticsearch.api_key_hint": "Méthode d'authentification préférée. Laissez vide pour utiliser nom d'utilisateur/mot de passe.",
+  "settings.elasticsearch.username": "Nom d'utilisateur",
+  "settings.elasticsearch.username_placeholder": "elastic",
+  "settings.elasticsearch.password": "Mot de passe",
+  "settings.elasticsearch.skip_tls": "Ignorer la vérification du certificat TLS",
+  "settings.elasticsearch.test": "Tester la connexion",
+  "settings.elasticsearch.test_hint": "⚠️ Veuillez enregistrer vos paramètres Elasticsearch avant de tester.",
+  "settings.elasticsearch.help_title": "Guide de configuration Elasticsearch",
+  "settings.elasticsearch.help_template_title": "1. Créer un modèle d'index",
+  "settings.elasticsearch.help_template_desc": "Créez un modèle d'index dans Kibana Dev Tools ou via l'API pour que Elasticsearch mappe correctement les champs :",
+  "settings.elasticsearch.help_doc_title": "2. Structure du document",
+  "settings.elasticsearch.help_doc_desc": "Fail2ban-UI envoie des documents compatibles ECS. Chaque événement ban/unban est indexé dans fail2ban-events-AAAA.MM.JJ :",
+  "settings.elasticsearch.help_auth_title": "3. Authentification",
+  "settings.elasticsearch.help_auth_desc": "Utilisez une clé API (préférée) ou l'authentification basique avec un utilisateur ayant accès en écriture aux index fail2ban-events-*. Créez une clé API dans Kibana sous Stack Management → API Keys.",
+  "settings.elasticsearch.help_savetest_title": "4. Enregistrer et Tester",
+  "settings.elasticsearch.help_savetest_desc": "Enregistrez les paramètres Fail2ban-UI et testez la connexion à Elasticsearch en cliquant sur le bouton Test. (Cela créera l'index fail2ban-events-* et ingérera le premier événement.)",
+  "settings.elasticsearch.help_dataview_title": "5. Vue de données Kibana",
+  "settings.elasticsearch.help_dataview_desc": "Dans Kibana, allez dans Stack Management → Data Views → Créer une vue de données. Utilisez le pattern fail2ban-events-* comme nom et pattern d'index et sélectionnez @timestamp comme champ temporel.",
+  "settings.elasticsearch.help_review_title": "6. Vérifier les données",
+  "settings.elasticsearch.help_review_desc": "Dans Kibana, allez dans Discover → Sélectionnez l'index fail2ban-events-* et vous devriez voir votre premier événement ingéré.",
   "settings.smtp": "Configuration SMTP",
   "settings.smtp_host": "Hôte SMTP",
   "settings.smtp_host_placeholder": "par exemple, smtp.gmail.com",
