--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -146,9 +146,51 @@
   "settings.destination_email_placeholder": "alerts@swissmakers.ch",
   "settings.alert_countries": "Paesi per allarme",
   "settings.alert_countries_description": "Seleziona i paesi per i quali desideri ricevere allarmi via email quando si verifica un blocco.",
-  "settings.email_alerts": "Preferenze allarmi email",
-  "settings.email_alerts_for_bans": "Abilita allarmi email per i ban",
-  "settings.email_alerts_for_unbans": "Abilita allarmi email per gli unban",
+  "settings.alerts": "Preferenze allarmi",
+  "settings.alerts_for_bans": "Abilita allarmi per i ban",
+  "settings.alerts_for_unbans": "Abilita allarmi per gli unban",
+  "settings.alert_provider": "Fornitore di allarmi",
+  "settings.alert_provider_email": "Email (SMTP)",
+  "settings.alert_provider_webhook": "Webhook",
+  "settings.alert_provider_elasticsearch": "Elasticsearch",
+  "settings.webhook.title": "Configurazione Webhook",
+  "settings.webhook.url": "URL Webhook",
+  "settings.webhook.url_placeholder": "https://my-ntfy-server/fail2ban-topic",
+  "settings.webhook.method": "Metodo HTTP",
+  "settings.webhook.headers": "Header personalizzati",
+  "settings.webhook.headers_placeholder": "Authorization: Bearer il-tuo-token",
+  "settings.webhook.headers_hint": "Un header per riga nel formato Chiave: Valore.",
+  "settings.webhook.skip_tls": "Ignora la verifica del certificato TLS",
+  "settings.webhook.test": "Invia webhook di test",
+  "settings.webhook.test_hint": "⚠️ Salva le impostazioni webhook prima di testare.",
+  "settings.elasticsearch.title": "Configurazione Elasticsearch",
+  "settings.elasticsearch.url": "URL Elasticsearch",
+  "settings.elasticsearch.url_placeholder": "https://elasticsearch.example.com:9200",
+  "settings.elasticsearch.index": "Nome indice",
+  "settings.elasticsearch.index_placeholder": "fail2ban-events",
+  "settings.elasticsearch.index_hint": "Un suffisso data giornaliero (-AAAA.MM.GG) viene aggiunto automaticamente per la gestione del ciclo di vita dell'indice.",
+  "settings.elasticsearch.api_key": "Chiave API",
+  "settings.elasticsearch.api_key_placeholder": "Chiave API codificata in Base64",
+  "settings.elasticsearch.api_key_hint": "Metodo di autenticazione preferito. Lascia vuoto per usare nome utente/password.",
+  "settings.elasticsearch.username": "Nome utente",
+  "settings.elasticsearch.username_placeholder": "elastic",
+  "settings.elasticsearch.password": "Password",
+  "settings.elasticsearch.skip_tls": "Ignora la verifica del certificato TLS",
+  "settings.elasticsearch.test": "Testa connessione",
+  "settings.elasticsearch.test_hint": "⚠️ Salva le impostazioni Elasticsearch prima di testare.",
+  "settings.elasticsearch.help_title": "Guida alla configurazione Elasticsearch",
+  "settings.elasticsearch.help_template_title": "1. Creare un template di indice",
+  "settings.elasticsearch.help_template_desc": "Crea un template di indice in Kibana Dev Tools o tramite API per mappare correttamente i campi in Elasticsearch:",
+  "settings.elasticsearch.help_doc_title": "2. Struttura del documento",
+  "settings.elasticsearch.help_doc_desc": "Fail2ban-UI invia documenti compatibili ECS. Ogni evento ban/unban viene indicizzato in fail2ban-events-AAAA.MM.GG:",
+  "settings.elasticsearch.help_auth_title": "3. Autenticazione",
+  "settings.elasticsearch.help_auth_desc": "Usa una chiave API (preferita) o autenticazione basic con un utente che ha accesso in scrittura agli indici fail2ban-events-*. Crea una chiave API in Kibana sotto Stack Management → API Keys.",
+  "settings.elasticsearch.help_savetest_title": "4. Salva e Testa",
+  "settings.elasticsearch.help_savetest_desc": "Salva le impostazioni di Fail2ban-UI e testa la connessione a Elasticsearch cliccando il pulsante Test. (Questo creerà l'indice fail2ban-events-* e inserirà il primo evento.)",
+  "settings.elasticsearch.help_dataview_title": "5. Vista dati Kibana",
+  "settings.elasticsearch.help_dataview_desc": "In Kibana, vai a Stack Management → Data Views → Crea vista dati. Usa il pattern fail2ban-events-* come nome e pattern di indice e seleziona @timestamp come campo temporale.",
+  "settings.elasticsearch.help_review_title": "6. Verifica i dati",
+  "settings.elasticsearch.help_review_desc": "In Kibana, vai a Discover → Seleziona l'indice fail2ban-events-* e dovresti vedere il tuo primo evento inserito.",
   "settings.smtp": "Configurazione SMTP",
   "settings.smtp_host": "Host SMTP",
   "settings.smtp_host_placeholder": "es. smtp.gmail.com",
